// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save and share bar component email icon when tokenising with loading state while network request is fetching data 1`] = `
<BarItem
  dataTestId="email-share"
  url=""
>
  <IconActivityIndicator
    size="small"
    style={
      Object {
        "borderRadius": 9999,
        "height": 40,
        "overflow": "hidden",
        "width": 40,
      }
    }
  />
</BarItem>
`;

exports[`save and share bar component save and share bar renders correctly when logged in 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  data-testid="save-and-share-bar"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "space-between",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    }
  }
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": "14px",
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem
      dataTestId="email-share"
      url=""
    >
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      dataTestId="share-twitter"
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      dataTestId="share-facebook"
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      dataTestId="copy-to-clickboard"
      hoverColor="#1D1D1B"
      url=""
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    data-testid="save-star"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
        "marginLeft": "auto",
      }
    }
  >
    <SaveStar
      articleId="96508c84-6611-11e9-adc2-05e1b87efaea"
    />
  </div>
</div>
`;

exports[`save and share bar component save and share bar renders correctly when not logged in 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  data-testid="save-and-share-bar"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "space-between",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    }
  }
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": "14px",
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem
      dataTestId="email-share"
      url=""
    >
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      dataTestId="share-twitter"
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      dataTestId="share-facebook"
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      dataTestId="copy-to-clickboard"
      hoverColor="#1D1D1B"
      url=""
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
</div>
`;
